# IA-studies

./: pyproject.toml  requiremnts.txt
basic_perceptron/: activations.py  perceptron_example1.py  perceptron_example2.py
cnn-test/basic_perceptron/: activations.py  convert_images.py  example2.py  perceptron_example1.py  perceptron_example2.py  perceptron_example3.py  poc.py  pyproject.toml  rat.csv
learning_numpy/: example1.py  matrix_example1.py
pytorch/: classification.py  example2.py  sigmoid.py  train.py
pytorch/exemple1/: Makefile  basic_perceptron_pytorch.py  lenet.py  predict.py
pytorch/exemple1/output/: model.pth
pytorch/models/: 01_pytorch_workflow_model_0.pth
tensor_flow/: cnn_2.py  main.py
