[tool.poetry]
name = "cnn-test"
version = "0.1.0"
description = ""
authors = ["Dturati <davidturati@gmail.com>"]
readme = "README.md"
packages = [{include = "cnn_test"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.2"
black = "^23.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
